# sdr_practice

./: .gitmodules  CMakeLists.txt  README.md  ansible_install.yml  install.sh
include/: pluto_sdr_lib.h
include/ui/: pluto_ui.h
lib/: CMakeLists.txt  bit_generation.cpp  bit_generation.h  freq_sync.cpp  freq_sync.h  math_operations.cpp  math_operations.h  modulation.cpp  modulation.h  ofdm.cpp  ofdm.h  pulse_shaping.cpp  pulse_shaping.h  test_rx_samples_bpsk_barker13.h  test_rx_samples_pam_qam4_2_barker13.h  time_sync.cpp  time_sync.h
src/: main.cpp  pluto_sdr_lib.cpp
src/ui/: pluto_ui.cpp
tests/: CMakeLists.txt
tests/end2end/: CMakeLists.txt  end2end.cpp
tests/matlab/: qpsk_tx_rx.mlx  untitled.mlx
tests/modulation/: CMakeLists.txt  test_modulation.cpp
tests/pulse_shaping/: CMakeLists.txt  test_pulse_shapes.cpp
tests/scripts/: plot_pcm.py  test.py
tests/soapy_pluto/: CMakeLists.txt  soapy_pluto_sdr_timestamp.c
tests/tun_test/: tun_test.c
